--- a/index.html
+++ b/index.html
@@ -222,76 +222,7 @@ Free HTML CSS Template
         </section>
 
         <!-- ABOUT SECTION -->
-        <section id="about" class="section-about">
-            <h2 class="section-title">About Us</h2>
-            <div class="about-container">
-                <div class="about-content">
-                    <h3>Why Choose Us</h3>
-                    <p>We believe in the power of simplicity. Every project we undertake is approached with a commitment to excellence, minimalist design principles, and a deep understanding of digital strategy.</p>
-                    <p>Our team brings together designers, developers, and strategists who share a passion for creating meaningful digital experiences.</p>
-                    <p>This template is brought to you by <a href="about-tooplate.html">Tooplate</a>, your destination for free HTML CSS website templates. All our templates are AI-ready, meaning you can easily customize them using AI tools like Claude or ChatGPT to match your brand and vision perfectly.</p>
-                </div>
-                <div class="about-blocks">
-                    <div class="about-block">
-                        <h4>Creative Excellence</h4>
-                        <p>Award-winning designs that stand out and deliver results beyond expectations.</p>
-                    </div>
-                    <div class="about-block">
-                        <h4>Technical Expertise</h4>
-                        <p>Modern technology stack ensuring performance, security, and scalability.</p>
-                    </div>
-                    <div class="about-block">
-                        <h4>Client Partnership</h4>
-                        <p>Collaborative approach with transparent communication throughout the project.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
 
-        <!-- CONTACT SECTION -->
-        <section id="contact" class="section-contact">
-            <div class="contact-container">
-                <div class="contact-info">
-                    <h3>Get In Touch</h3>
-                    <p>Ready to bring your vision to life? Reach out to us and let's discuss how we can help elevate your brand and create something extraordinary together.</p>
-                    <div class="contact-details">
-                        <div class="contact-item">
-                            <label>Email</label>
-                            <a href="https://x.com/minthu"><span class="__cf_email__" data-cfemail="ff979a939390bf9c8d9a9e8b96899a8c8b8a9b9690d19c9092">[email&#160;protected]</span></a>
-                        </div>
-                        <div class="contact-item">
-                            <label>Phone</label>
-                            <a href="tel:+1234567890">+1 (234) 567-890</a>
-                        </div>
-                        <div class="contact-item">
-                            <label>Location</label>
-                            <p>Creative Hub, Design District<br>New York, NY 10001</p>
-                        </div>
-                    </div>
-                </div>
-                <form class="contact-form" onsubmit="handleSubmit(event)">
-                    <div class="form-row">
-                        <div class="form-group">
-                            <label for="name">Full Name</label>
-                            <input type="text" id="name" name="name" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Email Address</label>
-                            <input type="email" id="email" name="email" required>
-                        </div>
-                    </div>
-                    <div class="form-group full-width">
-                        <label for="subject">Subject</label>
-                        <input type="text" id="subject" name="subject" required>
-                    </div>
-                    <div class="form-group full-width">
-                        <label for="message">Message</label>
-                        <textarea id="message" name="message" required></textarea>
-                    </div>
-                    <button type="submit" class="submit-btn">Send Message</button>
-                </form>
-            </div>
-        </section>
 
         <!-- PORTFOLIO MODAL -->
         <div id="portfolioModal" class="portfolio-modal">
@@ -315,6 +246,6 @@ Free HTML CSS Template
     </footer>
 
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-	<script src="tooplate-graphite-script.js"></script>
+	<script src=""></script>
 </body>
 </html>
