--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ Free HTML CSS Template
             </a>
             <nav>
                 <a href="#home" class="active">Home</a>
-                <a href="#services">Services</a>
-                <a href="#portfolio">Portfolio</a>
+                <a href="#skils">Skills</a>
+                <a href="#objectives">Objectives</a>
                 <a href="#about">About</a>
                 <a href="#contact">Contact</a>
             </nav>
@@ -71,38 +71,38 @@ Free HTML CSS Template
             </div>
         </section>
 
-        <!-- SERVICES SECTION -->
-        <section id="services" class="section-services">
-            <div class="services-container">
-                <h2 class="section-title">Our Services</h2>
-                <div class="services-grid">
-                    <div class="service-card">
-                        <div class="service-number">.01</div>
+        <!-- Skills SECTION -->
+        <section id="skils" class="section-skils">
+            <div class="skils-container">
+                <h2 class="section-title">Skills Needed</h2>
+                <div class="skils-grid">
+                    <div class="skils-card">
+                        <div class="skils-number">.01</div>
                         <h3>Web Design</h3>
                         <p>Elegant and functional websites that capture your brand essence and convert visitors into clients with stunning visuals.</p>
                     </div>
-                    <div class="service-card">
-                        <div class="service-number">.02</div>
+                    <div class="skils-card">
+                        <div class="skils-number">.02</div>
                         <h3>Development</h3>
                         <p>Clean, scalable code that powers seamless user experiences and drives measurable results for your business.</p>
                     </div>
-                    <div class="service-card">
-                        <div class="service-number">.03</div>
+                    <div class="skils-card">
+                        <div class="skils-number">.03</div>
                         <h3>Branding</h3>
                         <p>Strategic visual identities that communicate your unique value and resonate with your target audience effectively.</p>
                     </div>
-                    <div class="service-card">
-                        <div class="service-number">.04</div>
+                    <div class="skills-card">
+                        <div class="skils-number">.04</div>
                         <h3>Mobile Design</h3>
                         <p>Responsive and intuitive mobile experiences optimized for all devices and screen sizes.</p>
                     </div>
-                    <div class="service-card">
-                        <div class="service-number">.05</div>
+                    <div class="skils-card">
+                        <div class="skils-number">.05</div>
                         <h3>SEO & Analytics</h3>
                         <p>Data-driven strategies to improve visibility, increase traffic, and achieve your digital goals.</p>
                     </div>
-                    <div class="service-card">
-                        <div class="service-number">.06</div>
+                    <div class="skils-card">
+                        <div class="skils-number">.06</div>
                         <h3>Launch & Support</h3>
                         <p>Complete project management from concept to launch, with ongoing support and optimization.</p>
                     </div>
@@ -111,7 +111,7 @@ Free HTML CSS Template
         </section>
 
         <!-- PORTFOLIO SECTION -->
-        <section id="portfolio" class="section-portfolio">
+        <section id="objectives" class="section-objectives">
             <div class="portfolio-container">
                 <h2 class="section-title">Recent Work</h2>
                 <div class="portfolio-grid">
@@ -222,7 +222,31 @@ Free HTML CSS Template
         </section>
 
         <!-- ABOUT SECTION -->
-
+        <section id="about" class="section-about">
+            <h2 class="section-title">About Us</h2>
+            <div class="about-container">
+                <div class="about-content">
+                    <h3>Why Choose Us</h3>
+                    <p>We believe in the power of simplicity. Every project we undertake is approached with a commitment to excellence, minimalist design principles, and a deep understanding of digital strategy.</p>
+                    <p>Our team brings together designers, developers, and strategists who share a passion for creating meaningful digital experiences.</p>
+                    <p>This template is brought to you by <a href="about-tooplate.html">Tooplate</a>, your destination for free HTML CSS website templates. All our templates are AI-ready, meaning you can easily customize them using AI tools like Claude or ChatGPT to match your brand and vision perfectly.</p>
+                </div>
+                <div class="about-blocks">
+                    <div class="about-block">
+                        <h4>Creative Excellence</h4>
+                        <p>Award-winning designs that stand out and deliver results beyond expectations.</p>
+                    </div>
+                    <div class="about-block">
+                        <h4>Technical Expertise</h4>
+                        <p>Modern technology stack ensuring performance, security, and scalability.</p>
+                    </div>
+                    <div class="about-block">
+                        <h4>Client Partnership</h4>
+                        <p>Collaborative approach with transparent communication throughout the project.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!-- PORTFOLIO MODAL -->
         <div id="portfolioModal" class="portfolio-modal">
@@ -242,7 +266,7 @@ Free HTML CSS Template
 
     <!-- FOOTER -->
     <footer>
-        <p>&copy; 2026 Creative Studio. All rights reserved. | Designed by <a href="https://www.tooplate.com/" target="_blank" rel="nofollow">Tooplate</a></p>
+        <p>&copy; 2026 Creative Studio. All rights reserved. | Designed by <a href="https://www.tooplate.com/" target="_blank" rel="nofollow">Tim, Ryan, Enrique, and Cesar</a></p>
     </footer>
 
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
