--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Creative Studio - Minimal Design</title>
+    <title>Software Quality Assurance Tester</title>
     <link rel="stylesheet" href="tooplate-graphite-creative.css">
 <!--
 
@@ -19,11 +19,11 @@ Free HTML CSS Template
     <!-- HEADER -->
     <header>
         <div class="header-container">
-            <a href="#" class="logo-area" onclick="scrollToTop(); return false;">
+            <a href="#home" class="logo-area" onclick="scrollToTop(); return false;">
                 <div class="logo-vector">CS</div>
                 <div class="logo-text">
-                    <h1>Creative Studio</h1>
-                    <p>Minimal Design</p>
+                    <h1>SQA Tester</h1>
+                    <p>Software Quality Assurance Tester</p>
                 </div>
             </a>
             <nav>
@@ -31,7 +31,6 @@ Free HTML CSS Template
                 <a href="#skils">Skills</a>
                 <a href="#objectives">Objectives</a>
                 <a href="#about">About</a>
-                <a href="#contact">Contact</a>
             </nav>
             <button class="menu-toggle" aria-label="Toggle menu">
                 <span></span>
@@ -50,7 +49,6 @@ Free HTML CSS Template
                     <div class="hero-line"></div>
                     <h2>We Create Experiences</h2>
                     <p>Minimalist design meets powerful functionality. Crafting digital solutions that inspire and engage your audience.</p>
-                    <a href="#contact" class="cta-button">Start a Project</a>
                 </div>
                 <div class="slider-container">
                     <div class="slide active" data-fallback="Design Workspace">
@@ -78,28 +76,29 @@ Free HTML CSS Template
                 <div class="skils-grid">
                     <div class="skils-card">
                         <div class="skils-number">.01</div>
-                        <h3>Web Design</h3>
-                        <p>Elegant and functional websites that capture your brand essence and convert visitors into clients with stunning visuals.</p>
+                        <h3>Communication</h3>
+                        <p>To ensure ability to write test plans and test cases. To communicate bugs to developers and other stakeholders.</p>
                     </div>
                     <div class="skils-card">
                         <div class="skils-number">.02</div>
-                        <h3>Development</h3>
-                        <p>Clean, scalable code that powers seamless user experiences and drives measurable results for your business.</p>
+                        <h3>Solving Skills</h3>
+                        <p>To ensure the ability to translate technical requirements test plans.</p>
                     </div>
                     <div class="skils-card">
                         <div class="skils-number">.03</div>
-                        <h3>Branding</h3>
-                        <p>Strategic visual identities that communicate your unique value and resonate with your target audience effectively.</p>
+                        <h3>Focus</h3>
+                        <p>ensures the ability to find the bad defects and bugs quickly.</p>
                     </div>
                     <div class="skills-card">
                         <div class="skils-number">.04</div>
-                        <h3>Mobile Design</h3>
-                        <p>Responsive and intuitive mobile experiences optimized for all devices and screen sizes.</p>
+                        <h3>Abstract Thinking</h3>
+                        <p> ensure ability to not conform to the norm. Norms do not find bugs quickly.
+</p>
                     </div>
                     <div class="skils-card">
                         <div class="skils-number">.05</div>
-                        <h3>SEO & Analytics</h3>
-                        <p>Data-driven strategies to improve visibility, increase traffic, and achieve your digital goals.</p>
+                        <h3>Speaking</h3>
+                        <p>Speaking to others.</h3>
                     </div>
                     <div class="skils-card">
                         <div class="skils-number">.06</div>
@@ -270,6 +269,6 @@ Free HTML CSS Template
     </footer>
 
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-	<script src=""></script>
+	<script src="tooplate-graphite-script.js"></script>
 </body>
 </html>
