--- a/index.html
+++ b/index.html
@@ -225,23 +225,23 @@ Free HTML CSS Template
             <h2 class="section-title">About Us</h2>
             <div class="about-container">
                 <div class="about-content">
-                    <h3>Why Choose Us</h3>
-                    <p>We believe in the power of simplicity. Every project we undertake is approached with a commitment to excellence, minimalist design principles, and a deep understanding of digital strategy.</p>
-                    <p>Our team brings together designers, developers, and strategists who share a passion for creating meaningful digital experiences.</p>
-                    <p>This template is brought to you by <a href="about-tooplate.html">Tooplate</a>, your destination for free HTML CSS website templates. All our templates are AI-ready, meaning you can easily customize them using AI tools like Claude or ChatGPT to match your brand and vision perfectly.</p>
+                    <h3>Bio</h3>
+                    <p></p>
+                    <p></p>
+                    <p>This template is brought to you by <a href="https://www.acitech.org/">ACIT</a>With handcrafted ready code for you to change to your liking. Hope you enjoy it.</p>
                 </div>
                 <div class="about-blocks">
                     <div class="about-block">
-                        <h4>Creative Excellence</h4>
-                        <p>Award-winning designs that stand out and deliver results beyond expectations.</p>
+                        <h4>Education Requirements</h4>
+                        <p>Bachelor's Degree, basic knowledge of programming langauge like C,C++ OR Java.</p>
                     </div>
                     <div class="about-block">
-                        <h4>Technical Expertise</h4>
-                        <p>Modern technology stack ensuring performance, security, and scalability.</p>
+                        <h4>Responsibilities</h4>
+                        <p>Design and executive test plans on computer applications, maintain a database of software defects, etc.</p>
                     </div>
                     <div class="about-block">
-                        <h4>Client Partnership</h4>
-                        <p>Collaborative approach with transparent communication throughout the project.</p>
+                        <h4>Quickness</h4>
+                        <p>To find the bad defects and bugs quickly</p>
                     </div>
                 </div>
             </div>
@@ -265,7 +265,7 @@ Free HTML CSS Template
 
     <!-- FOOTER -->
     <footer>
-        <p>&copy; 2026 Creative Studio. All rights reserved. | Designed by <a href="https://www.tooplate.com/" target="_blank" rel="nofollow">Tim, Ryan, Enrique, and Cesar</a></p>
+        <p>&copy; 2026 Creative Studio. All rights reserved. | Designed by <a href="sour1072@student.acitech.org" target="_blank" rel="nofollow">Tim, Ryan, Enrique, and Cesar</a></p>
     </footer>
 
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
