--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Free HTML CSS Template
     <!-- MAIN CONTENT -->
     <main>
         <!-- HERO SECTION -->
-        <section id="home" class="section-hero">
+        <section id="hero" class="section-hero">
             <div class="hero-container">
                 <div class="hero-left">
                     <div class="hero-line"></div>
@@ -92,8 +92,7 @@ Free HTML CSS Template
                     <div class="skills-card">
                         <div class="skils-number">.04</div>
                         <h3>Abstract Thinking</h3>
-                        <p> ensure ability to not conform to the norm. Norms do not find bugs quickly.
-</p>
+                        <p> ensure ability to not conform to the norm. Norms do not find bugs quickly.</p>
                     </div>
                     <div class="skils-card">
                         <div class="skils-number">.05</div>
@@ -240,8 +239,8 @@ Free HTML CSS Template
                         <p>Design and executive test plans on computer applications, maintain a database of software defects, etc.</p>
                     </div>
                     <div class="about-block">
-                        <h4>Quickness</h4>
-                        <p>To find the bad defects and bugs quickly</p>
+                        <h4>Salary</h4>
+                        <p>In the U.S earnings on average are 111,790, and in New Jersey are 102,610.</p>
                     </div>
                 </div>
             </div>
