--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Free HTML CSS Template
             <nav>
                 <a href="#home" class="active">Home</a>
                 <a href="#skils">Skills</a>
-                <a href="#objectives">Objectives</a>
+                <a href="#portfolio">Portfolio</a>
                 <a href="#about">About</a>
             </nav>
             <button class="menu-toggle" aria-label="Toggle menu">
@@ -109,7 +109,7 @@ Free HTML CSS Template
         </section>
 
         <!-- PORTFOLIO SECTION -->
-        <section id="objectives" class="section-objectives">
+        <section id="portfolio" class="section-objectives">
             <div class="portfolio-container">
                 <h2 class="section-title">Recent Work</h2>
                 <div class="portfolio-grid">
