--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ Free HTML CSS Template
             <div class="hero-container">
                 <div class="hero-left">
                     <div class="hero-line"></div>
-                    <h2>We Create Experiences</h2>
-                    <p>Minimalist design meets powerful functionality. Crafting digital solutions that inspire and engage your audience.</p>
+                    <h2>What is the Job?</h2>
+                    <p>They ensure that software applications meet quality standards, functionality requirements, and usability goals by designing, executing, and documenting tests.</p>
                 </div>
                 <div class="slider-container">
                     <div class="slide active" data-fallback="Design Workspace">
@@ -92,7 +92,7 @@ Free HTML CSS Template
                     <div class="skills-card">
                         <div class="skils-number">.04</div>
                         <h3>Abstract Thinking</h3>
-                        <p> ensure ability to not conform to the norm. Norms do not find bugs quickly.</p>
+                        <p>ensure ability to not conform to the norm. Norms do not find bugs quickly.</p>
                     </div>
                     <div class="skils-card">
                         <div class="skils-number">.05</div>
