--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Free HTML CSS Template
                 </div>
             </a>
             <nav>
-                <a href="#home" class="active">Home</a>
+                <a href="#home">Home</a>
                 <a href="#skils">Skills</a>
                 <a href="#portfolio">Portfolio</a>
                 <a href="#about">About</a>
@@ -48,7 +48,7 @@ Free HTML CSS Template
                 <div class="hero-left">
                     <div class="hero-line"></div>
                     <h2>What is the Job?</h2>
-                    <p>They ensure that software applications meet quality standards, functionality requirements, and usability goals by designing, executing, and documenting tests.</p>
+                    <h3>They ensure that software applications meet quality standards, functionality requirements, and usability goals by designing, executing, and documenting tests.</h3>
                 </div>
                 <div class="slider-container">
                     <div class="slide active" data-fallback="Design Workspace">
@@ -76,33 +76,33 @@ Free HTML CSS Template
                 <div class="skils-grid">
                     <div class="skils-card">
                         <div class="skils-number">.01</div>
-                        <h3>Communication</h3>
-                        <p>To ensure ability to write test plans and test cases. To communicate bugs to developers and other stakeholders.</p>
+                        <h3> Communication</h3>
+                        <p> To ensure ability to write test plans and test cases. To communicate bugs to developers and other stakeholders.</p>
                     </div>
                     <div class="skils-card">
                         <div class="skils-number">.02</div>
-                        <h3>Solving Skills</h3>
-                        <p>To ensure the ability to translate technical requirements test plans.</p>
+                        <h3> Solving Skills</h3>
+                        <p> To ensure the ability to translate technical requirements test plans.</p>
                     </div>
                     <div class="skils-card">
                         <div class="skils-number">.03</div>
-                        <h3>Focus</h3>
-                        <p>ensures the ability to find the bad defects and bugs quickly.</p>
+                        <h3> Focus</h3>
+                        <p> To ensures the ability to find the bad defects and bugs quickly.</p>
                     </div>
                     <div class="skills-card">
                         <div class="skils-number">.04</div>
-                        <h3>Abstract Thinking</h3>
-                        <p>ensure ability to not conform to the norm. Norms do not find bugs quickly.</p>
+                        <h3> Abstract Thinking</h3>
+                        <p> To ensure ability to not conform to the norm. Norms do not find bugs quickly.</p>
                     </div>
                     <div class="skils-card">
                         <div class="skils-number">.05</div>
-                        <h3>Speaking</h3>
-                        <p>Speaking to others.</h3>
+                        <h3> Speaking</h3>
+                        <p> Speaking to others.</h3>
                     </div>
                     <div class="skils-card">
                         <div class="skils-number">.06</div>
-                        <h3>Launch & Support</h3>
-                        <p>Complete project management from concept to launch, with ongoing support and optimization.</p>
+                        <h3> Launch & Support</h3>
+                        <p> Complete project management from concept to launch, with ongoing support and optimization.</p>
                     </div>
                 </div>
             </div>
@@ -227,7 +227,7 @@ Free HTML CSS Template
                     <h3>Bio</h3>
                     <p></p>
                     <p></p>
-                    <p>This template is brought to you by <a href="https://www.acitech.org/">ACIT</a>With handcrafted ready code for you to change to your liking. Hope you enjoy it.</p>
+                    <p>This template is brought to you by <a href="https://www.acitech.org/">ACIT</a> with handcrafted ready code for you to change to your liking. Hope you enjoy it. It's provides all the divs and css and some script behind. You just have to stitch in the information. </p>
                 </div>
                 <div class="about-blocks">
                     <div class="about-block">
