--- a/index.html
+++ b/index.html
@@ -70,37 +70,37 @@ Free HTML CSS Template
         </section>
 
         <!-- Skills SECTION -->
-        <section id="skils" class="section-skils">
-            <div class="skils-container">
+        <section id="skills" class="section-skils">
+            <div class="skills-container">
                 <h2 class="section-title">Skills Needed</h2>
-                <div class="skils-grid">
-                    <div class="skils-card">
-                        <div class="skils-number">.01</div>
+                <div class="skills-grid">
+                    <div class="skills-card">
+                        <div class="skills-number">.01</div>
                         <h3> Communication</h3>
                         <p> To ensure ability to write test plans and test cases. To communicate bugs to developers and other stakeholders.</p>
                     </div>
-                    <div class="skils-card">
+                    <div class="skills-card">
                         <div class="skils-number">.02</div>
                         <h3> Solving Skills</h3>
                         <p> To ensure the ability to translate technical requirements test plans.</p>
                     </div>
-                    <div class="skils-card">
+                    <div class="skills-card">
                         <div class="skils-number">.03</div>
                         <h3> Focus</h3>
                         <p> To ensures the ability to find the bad defects and bugs quickly.</p>
                     </div>
                     <div class="skills-card">
-                        <div class="skils-number">.04</div>
+                        <div class="skills-number">.04</div>
                         <h3> Abstract Thinking</h3>
                         <p> To ensure ability to not conform to the norm. Norms do not find bugs quickly.</p>
                     </div>
-                    <div class="skils-card">
-                        <div class="skils-number">.05</div>
+                    <div class="skills-card">
+                        <div class="skills-number">.05</div>
                         <h3> Speaking</h3>
                         <p> Speaking to others.</h3>
                     </div>
-                    <div class="skils-card">
-                        <div class="skils-number">.06</div>
+                    <div class="skills-card">
+                        <div class="skills-number">.06</div>
                         <h3> Launch & Support</h3>
                         <p> Complete project management from concept to launch, with ongoing support and optimization.</p>
                     </div>
